# geo_lib

./: .gitignore  AGENTS.md  CONTEXT.md  agent_guide.md  fake_cloud_plan.md  geo
algorithms/avp_remote/: README.md  asset_paths.py  asset_setup.py  avp_bridge.py  avp_config.py  avp_g1_pose.py  avp_landau_cli.py  avp_landau_session.py  avp_marker_visualizer.py  avp_snapshot.json  avp_snapshot_io.py  avp_tracking_schema.py  avp_transform_utils.py  avp_wrist_marker.py  config.py  dex_hand_retarget_worker.py  dex_hand_retargeting.py  dex_hand_specs.py  headless_urdf_commands.py  isaacsim.avp_headless.kit  landau_mapping_config.py  landau_pose.py  landau_retarget.py  load_usd.py  mobile_franka.usd  print_avp_joint_info.py  robot.xml  run_avp_landau_session.py  tracking_source.py  urdf_kinematics.py  usd_skeleton_schema.py  usd_utils.py
algorithms/ikfast_urdf_solver/: README.md  __init__.py  benchmark.py  config.py  ikfast_library.py  pyproject.toml  render_pose_cases.py  solver.py  urdf_utils.py
algorithms/ikfast_urdf_solver/inputs/ur5/: ur5_kinematics.urdf
algorithms/ikfast_urdf_solver/scripts/: __init__.py  install_local_env.sh  prepare_ur5_sample.py
algorithms/ikfast_urdf_solver/tests/: test_solver_math.py  test_ur5_integration.py  test_urdf_utils.py
algorithms/widget_nesting_2d/: .gitignore  README.md  __init__.py  case_library.py  mujoco_debug.py  problem.py  pyproject.toml  render.py  run_case_suite.py  solver.py
algorithms/widget_nesting_2d/inputs/: complex_dual_board.json  constrained_single_board.json
algorithms/widget_nesting_2d/inputs/public_benchmarks/: README.md
algorithms/widget_nesting_2d/outputs/complex_dual_board/: solution.json
algorithms/widget_nesting_2d/outputs/constrained_single_board/: solution.json
algorithms/widget_nesting_2d/tests/: test_case_library.py  test_widget_nesting.py
problems/: TODO.txt  landau_walk_fix_plan.md  log.txt  urdf_learn_wasd_walk_landau_handoff.md
(+299 files in other folders)
