[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-lib-widget-nesting-2d"
version = "0.1.0"
description = "Hole-aware 2D polygon nesting for CNC board layouts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "shapely>=2.0",
]

[project.optional-dependencies]
debug = [
  "mujoco>=3.1",
  "numpy>=1.26",
  "pillow>=10.0",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
widget-nesting-2d = "algorithms.widget_nesting_2d.solver:main"
widget-nesting-2d-suite = "algorithms.widget_nesting_2d.run_case_suite:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "../.."}
packages = [
  "algorithms",
  "algorithms.widget_nesting_2d",
]
